<resources>
    <string name="app_name">RIDE</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="image_description">Image</string>

    <string name="hint_search">Apa yang Anda cari?</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>

    <string name="offer_credit_application">Offer Credit Application</string>
    <string name="current_task">Current Task</string>
    <string name="information">Information</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
