<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.bcaofficer.homebca.HomeBCAFragment">
    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="21dp"
            android:text="Hai, Chandra Ari"/>
    </LinearLayout>
    <ScrollView
        android:layout_below="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e1e1e1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimary"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_credit_card"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:textSize="21dp"
                            android:textStyle="bold"
                            android:text="@string/offer_credit_application"
                            android:layout_alignParentTop="true"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/shadow"/>
                    <LinearLayout
                        android:id="@+id/startLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/start"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textColor="@android:color/darker_gray"
                            android:textAlignment="center"
                            android:textSize="21dp"
                            android:text="START\nOFFERING"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimary"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_library"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:textSize="21dp"
                            android:textStyle="bold"
                            android:text="@string/current_task"
                            android:layout_alignParentTop="true"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/shadow"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/box1">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:background="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true">
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/box3">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:background="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true">
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimary"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_info"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:textSize="21dp"
                            android:textStyle="bold"
                            android:text="@string/information"
                            android:layout_alignParentTop="true"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/shadow"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_margin="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Email : chandra_ari@bca.co.id"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Phone Number : +62 813 2047 2527"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>